fixing carousels on small screens

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -438,11 +438,6 @@ body header nav {
 	#subnav span {
 		display: inline;
 	}
-
-	.carousel-prev,
-	.carousel-next {
-		display: none;
-	}
 } 
 
 .stockist {
